fix:spring session 配置

--- a/backend/src/main/resources/base.properties
+++ b/backend/src/main/resources/base.properties
@@ -103,3 +103,5 @@ management.endpoints.web.exposure.include=*
 #spring.freemarker.checkTemplateLocation=false
 spring.session.timeout=${session.timeout:43200}
 spring.session.store-type=none
+# cookie
+server.servlet.session.cookie.max-age=${session.timeout:43200}
